--- a/src/css/chat-gpt.css
+++ b/src/css/chat-gpt.css
@@ -4,7 +4,6 @@
   animation: fadeIn 0.5s ease forwards;
 }
 
-
 @keyframes fadeIn {
   to {
     opacity: 1;
@@ -29,11 +28,10 @@ body {
   width: 100%;
 
   margin: auto;
-  gap: 1rem; 
-  padding: 1.5rem; 
+  gap: 1rem;
+  padding: 1.5rem;
   flex-wrap: wrap;
 }
-
 
 .navegacao {
   font-size: larger;
@@ -66,14 +64,13 @@ body {
 }
 
 .perfil {
-  color:#2b2b2b;
+  color: #2b2b2b;
   background-color: #f7f9fc;
   margin-bottom: 1.5rem;
   padding: 1.5rem;
   border-radius: 1rem;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
   font-weight: 500;
-  
 }
 
 .navegacao a {
@@ -86,10 +83,10 @@ body {
   padding: 0.5rem 1rem;
   border-radius: 8px;
   transition: background-color 0.3s, color 0.3s;
-  
+
   .navegacao a.dashboard {
-  color: #f7f9fc;
- }
+    color: #f7f9fc;
+  }
 }
 
 .navegacao a:hover,
@@ -100,7 +97,7 @@ body {
 
 .conteudo {
   flex-grow: 1;
-  min-width: 0; 
+  min-width: 0;
   min-height: 90vh;
   gap: 2rem;
   background-color: white;
@@ -120,10 +117,10 @@ body {
   background-color: white;
   border-radius: 1rem;
   padding: 2rem;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.10);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: 0px;
 }
 
@@ -132,11 +129,13 @@ body {
   margin-bottom: 1.5rem;
   padding: 1.5rem;
   border-radius: 1rem;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.10);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   font-weight: 500;
 }
 
-.diario-1, .diario-2, .diario-3 {
+.diario-1,
+.diario-2,
+.diario-3 {
   background-color: #f7f9fc;
   margin-bottom: 2rem;
   border-radius: 1rem;
@@ -150,8 +149,8 @@ body {
   text-align: right;
   margin-right: -2px;
 }
-#diario-conteudo{
-  text-align: center  ;
+#diario-conteudo {
+  text-align: center;
   display: flex;
   align-items: center;
   align-content: center;
@@ -176,17 +175,17 @@ body {
   font-weight: 600;
 }
 .conteudo a {
-  display:flex;
+  display: flex;
   margin-bottom: 2rem;
-  background-color: #4caf50;       
-  color: white;                    
-  padding: 0.75rem 1.5rem;              
-  border-radius: 0.5rem;              
-  text-decoration: none;          
-  font-size: 1rem;                
+  background-color: #4caf50;
+  color: white;
+  padding: 0.75rem 1.5rem;
+  border-radius: 0.5rem;
+  text-decoration: none;
+  font-size: 1rem;
   font-weight: 600;
   transition: background-color 0.3s ease, transform 0.2s ease;
-  box-shadow: 0 0.25rem 0.5rem rgba(0,0,0,0.10);
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
 }
 
 #noteInput {
@@ -221,6 +220,27 @@ body {
   display: flex;
   flex-direction: column;
   height: 100%;
+ & .avatar-ia {
+    display: flex;
+    margin-top: 1rem;
+    align-items: center;
+    & img {
+      background-color: #ffffff;
+      height: 90px;
+      border-radius: 50%;
+      border-style: solid;
+      object-fit: cover;
+      margin-bottom: 0.5rem;
+      width: 5rem;
+    }
+    & h1 {
+      margin-left: 1rem;
+    }
+    & p {
+      margin-left: 1rem;
+      font-size: small;
+    }
+  }
 }
 
 #chat-box {
